Adjusting CSS of texts in login PAGE

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -21,8 +21,8 @@
           </ion-item>
 
           <div class="links">
-            <ion-text color="medium">Esqueceu sua senha?</ion-text><br />
-            <ion-text color="medium">Leia nossos termos</ion-text>
+            <ion-text color="medium" class="forgot-password">Esqueceu sua senha?</ion-text><br />
+            <ion-text color="medium" class="our-terms">Leia nossos termos</ion-text>
           </div>
 
           <ion-button expand="block" color="primary">Acessar</ion-button>
