--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -37,6 +37,22 @@
         font-size: 1.5rem;
         padding-bottom: 1px;
       }
+
+      .forgot-password{
+        padding: 5px 5px 5px 5px;
+        margin-left: 20%;
+        font-size: 1.2rem;
+      }
+      .our-terms{
+        padding: 5px 5px 5px 5px;
+        margin-left: 27%;
+        font-size: 1.0rem;
+      }
+      .divider{
+        padding: 5px 5px 5px 5px;
+        margin-left: 45%;
+        font-size: 1.0rem;
+      }
     }
   
     ion-card {
