Adding class="login-text" to H2 of login text

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -8,7 +8,7 @@
       <ion-card class="login-card">
         <ion-card-content>
 
-          <ion-text class="login-text"><h2>Login:</h2></ion-text>
+          <ion-text><h2 class="login-text">Login:</h2></ion-text>
 
           <ion-item>
             <img src="assets/icon/at-outline.png" alt="outline" class="logo" />
