--- a/src/app/pages/agenda/agenda.page.html
+++ b/src/app/pages/agenda/agenda.page.html
@@ -1,20 +1,34 @@
 <ion-content class="agenda-container" fullscreen>
   <div class="top-info">
-    <h2>Agenda de {{ role }}</h2>
-    <p class="data">Data: 22/03/2005</p>
+    <div class="user-header">
+      <img src="assets/photo/avatar.png" alt="avatar" class="avatar" />
+      <div class="user-info">
+        <div class="user-top">
+          <h3 class="username">Cristiane Santos</h3>
+          <img src="assets/icon/settings.png" alt="settings" class="settings" />
+        </div>
+        <div class="user-id"></div>
+        <div class="date-picker">
+          <span>Selecione uma data:</span>
+          <img src="assets/icon/calendar.png" alt="calendar" class="calendar" />
+        </div>
+      </div>
+    </div>
+    <hr />
   </div>
 
-  <ion-list class="agenda-list">
-    <ion-item *ngFor="let item of agendaItems" class="agenda-item" [color]="item.cor">
-      <ion-label>
-        <h3 class="nome">{{ item.nome }}</h3>
-        <p class="status">{{ item.status }}</p>
-      </ion-label>
-      <div slot="end" class="hora">{{ item.hora }}</div>
-    </ion-item>
-  </ion-list>
-
-  <div class="footer-actions">
-    <ion-button routerLink="/login" color="medium">Sair</ion-button>
-  </div>
+  <ion-card class="login-card">
+    <ion-card-content>
+      <ion-list class="agenda-list">
+       <ion-item *ngFor="let item of agendaItems" class="agenda-item" [color]="item.cor">
+        <img src="assets/photo/avatar.png" alt="avatar" class="avatar" />
+          <ion-label>
+            <h3 class="nome">{{ item.nome }}</h3>
+            <p class="status">{{ item.status }}</p>
+          </ion-label>
+          <div slot="end" class="hora">{{ item.hora }}</div>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
