--- a/src/app/pages/config/config.page.html
+++ b/src/app/pages/config/config.page.html
@@ -1,13 +1,76 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>config</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content class="agenda-container" fullscreen>
+  <div class="top-info">
+    <div class="user-header">
+      <img src="assets/photo/avatar.png" alt="avatar" class="avatar" />
+      <div class="user-info">
+        <div class="user-top">
+          <h3 class="username">Cristiane Santos</h3>
+          <img src="assets/icon/settings.png" alt="settings" class="settings" />
+        </div>
+        <div class="user-id"></div>
+        <div class="date-picker">
+          <span>Selecione uma data:</span>
+          <img src="assets/icon/calendar.png" alt="calendar" class="calendar" />
+        </div>
+      </div>
+    </div>
+    <hr />
+  </div>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">config</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-content class="ion-padding">
+    <ion-card>
+      <ion-card-content>
+  
+        <h2>Disponibilidade</h2>
+  
+        <ion-grid>
+          <ion-row>
+            <ion-col size="6">
+              <ion-label>Semanal:</ion-label>
+              <ion-select placeholder="Escolha o período">
+                <ion-select-option value="segSex">Segunda a Sexta</ion-select-option>
+                <ion-select-option value="fimSemana">Fins de Semana</ion-select-option>
+              </ion-select>
+            </ion-col>
+            <ion-col size="6">
+              <ion-label>Diária:</ion-label>
+              <ion-input placeholder="08:00 às 19:00" type="text">
+                <ion-icon slot="end" name="time-outline"></ion-icon>
+              </ion-input>
+            </ion-col>
+          </ion-row>
+  
+          <ion-row>
+            <ion-col size="12">
+              <ion-label>Intervalo:</ion-label>
+              <ion-input placeholder="12:00 às 13:00" type="text"></ion-input>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+  
+        <h2 style="margin-top: 1rem;">Dados do Usuário</h2>
+  
+        <ion-item>
+          <ion-label position="floating">Nome</ion-label>
+          <ion-input placeholder="Cristiane Santos" type="text"></ion-input>
+        </ion-item>
+  
+        <ion-item>
+          <ion-label position="floating">E-mail</ion-label>
+          <ion-input placeholder="cris123@gmail.com" type="email"></ion-input>
+        </ion-item>
+  
+        <ion-item>
+          <ion-label position="floating">Senha</ion-label>
+          <ion-input type="password" value="*****"></ion-input>
+        </ion-item>
+  
+        <ion-button expand="block" color="primary" class="ion-margin-top">
+          Alterar
+        </ion-button>
+  
+      </ion-card-content>
+    </ion-card>
+  </ion-content>
+  
 </ion-content>
