--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,12 +1,12 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="agenda" [routerLink]="['/tabs/agenda']">
-      <ion-icon name="calendar"></ion-icon>
+      <img src="assets/icon/home.png" alt="home" class="home" />
       <ion-label>Agenda</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="config" [routerLink]="['/tabs/config']">
-      <ion-icon name="settings"></ion-icon>
+      <img src="assets/icon/settings.png" alt="settings" class="settings" />
       <ion-label>Configurações</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
