Adicionando placeholder correto

--- a/src/app/pages/config/config.page.html
+++ b/src/app/pages/config/config.page.html
@@ -49,19 +49,19 @@
   
         <h2 style="margin-top: 1rem;">Dados do Usuário</h2>
   
-        <ion-item>
+        <ion-item class="item">
           <ion-label position="floating">Nome</ion-label>
-          <ion-input placeholder="Cristiane Santos" type="text"></ion-input>
+          <ion-input  class="placeholder" placeholder="Cristiane Santos" type="text"></ion-input>
         </ion-item>
   
-        <ion-item>
+        <ion-item  class="item">
           <ion-label position="floating">E-mail</ion-label>
-          <ion-input placeholder="cris123@gmail.com" type="email"></ion-input>
+          <ion-input class="placeholder" placeholder="cris123@gmail.com" type="email"></ion-input>
         </ion-item>
   
-        <ion-item>
+        <ion-item  class="item">
           <ion-label position="floating">Senha</ion-label>
-          <ion-input type="password" value="*****"></ion-input>
+          <ion-input class="placeholder" type="password" value="*****"></ion-input>
         </ion-item>
   
         <ion-button expand="block" color="primary" class="ion-margin-top">
