Corrigindo ícones e adicionando configuração do firebase

--- a/src/app/pages/config/config.page.html
+++ b/src/app/pages/config/config.page.html
@@ -5,6 +5,7 @@
       <div class="user-info">
         <div class="user-top">
           <h3 class="username">Cristiane Santos</h3>
+          <img src="assets/icon/enter-sharp.png" alt="calendar" class="calendar" (click)="logout()"/>
         </div>
         <div class="user-id"></div>
         <div class="date-picker">
