Aplicando autenticação com firebase

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -12,12 +12,12 @@
 
           <ion-item>
             <img src="assets/icon/at-outline.png" alt="outline" class="logo" />
-            <ion-input type="email" placeholder="Digite seu email"></ion-input>
+            <ion-input type="email" [(ngModel)]="email" placeholder="Digite seu email"></ion-input>
           </ion-item>
 
           <ion-item>
             <img src="assets/icon/bag.png" alt="bag" class="logo" />
-            <ion-input type="password" placeholder="Digite sua senha"></ion-input>
+            <ion-input type="password" [(ngModel)]="senha" placeholder="Digite sua senha"></ion-input>
           </ion-item>
 
           <div class="links">
