Implementando autenticação com dados trazidos

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -25,7 +25,7 @@
             <ion-text color="medium" class="our-terms">Leia nossos termos</ion-text>
           </div>
 
-          <ion-button expand="block" color="primary" (click)="onLogin('aluno')">Acessar</ion-button>
+          <ion-button expand="block" color="primary" (click)="onLogin()">Acessar</ion-button>
 
           <div class="divider">ou</div>
 
