--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -30,7 +30,7 @@
           <div class="divider">ou</div>
 
           <ion-button expand="block" color="light" class="google-btn">
-            <img src="assets/icon/google.png" class="google-icon" />
+            <img src="assets/icon/google.png" alt="Google" class="google-icon" />
             <span>Entrar com o Google</span>
           </ion-button>          
 
