--- a/src/app/pages/config/config.page.html
+++ b/src/app/pages/config/config.page.html
@@ -1,10 +1,10 @@
 <ion-content class="agenda-container" fullscreen>
   <div class="top-info">
     <div class="user-header">
-      <img src="assets/photo/avatar.png" alt="avatar" class="avatar" />
+      <img src="{{photoURL}}" alt="avatar" class="avatar" />
       <div class="user-info">
         <div class="user-top">
-          <h3 class="username">Cristiane Santos</h3>
+          <h3 class="username">{{ name }}</h3>
           <img src="assets/icon/enter-sharp.png" alt="calendar" class="calendar" (click)="logout()"/>
         </div>
         <div class="user-id"></div>
@@ -52,12 +52,12 @@
   
         <ion-item class="item">
           <ion-label position="floating">Nome</ion-label>
-          <ion-input  class="placeholder" placeholder="Cristiane Santos" type="text"></ion-input>
+          <ion-input  class="placeholder" placeholder="{{ name }}" type="text"></ion-input>
         </ion-item>
   
         <ion-item  class="item">
           <ion-label position="floating">E-mail</ion-label>
-          <ion-input class="placeholder" placeholder="cris123@gmail.com" type="email"></ion-input>
+          <ion-input class="placeholder" placeholder="{{email}}" type="email"></ion-input>
         </ion-item>
   
         <ion-item  class="item">
