--- a/src/app/pages/agenda/agenda.page.scss
+++ b/src/app/pages/agenda/agenda.page.scss
@@ -106,4 +106,14 @@
     flex-shrink: 0;
   }
   
+  .calendar-button {
+  min-width: 44px;
+  min-height: 44px;
+}
+
+.calendar {
+  width: 24px;
+  height: 24px;
+}
+
   
