Corrigindo ícone de logout

--- a/src/app/pages/agenda/agenda.page.html
+++ b/src/app/pages/agenda/agenda.page.html
@@ -5,9 +5,7 @@
       <div class="user-info">
         <div class="user-top">
           <h3 class="username">{{ name }}</h3>
-          <ion-button fill="clear" (click)="logout()">
-            <ion-icon name="log-out-outline"></ion-icon>
-          </ion-button>
+            <img src="assets/icon/enter-sharp.png" alt="calendar" class="calendar" (click)="logout()" />
         </div>
 
         <div class="date-picker">
