Adicionando ícone de timer

--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -5,7 +5,7 @@
       <ion-label>Agenda</ion-label>
     </ion-tab-button>
    <ion-tab-button tab="disponibilidade" [routerLink]="['/tabs/disponibilidade']">
-      <img src="assets/icon/settings.png" alt="disponibilidade" class="disponibilidade" />
+      <img src="assets/icon/timer.png" alt="disponibilidade" class="disponibilidade" />
       <ion-label>Disponibilidade</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="config" [routerLink]="['/tabs/config']">
