--- a/src/app/disponibilidade/disponibilidade.page.html
+++ b/src/app/disponibilidade/disponibilidade.page.html
@@ -12,54 +12,53 @@
     <hr />
   </div>
 
-  <ion-content class="ion-padding">
-    <ion-card>
-      <ion-card-content>
-        <h2>Disponibilidade</h2>
+  <!-- Removido ion-content interno, o correto é usar diretamente ion-card -->
+  <ion-card class="ion-padding">
+    <ion-card-content>
+      <h2>Disponibilidade</h2>
 
-        <ion-label class="ion-margin-bottom">Escolha os dias disponíveis:</ion-label>
+      <ion-label class="ion-margin-bottom">Escolha os dias disponíveis:</ion-label>
 
-        <ion-list>
-          <ng-container *ngFor="let dia of diasSemana">
-            <ion-item>
-              <ion-label>{{ dia.dia }}</ion-label> <!-- Corrigido -->
-              <ion-checkbox slot="end" [(ngModel)]="dia.selecionado"></ion-checkbox>
-            </ion-item>
+      <ion-list>
+        <ng-container *ngFor="let dia of diasSemana">
+          <ion-item>
+            <ion-label>{{ dia.dia }}</ion-label>
+            <ion-checkbox slot="end" [(ngModel)]="dia.selecionado"></ion-checkbox>
+          </ion-item>
 
-            <ion-item *ngIf="dia.selecionado" class="ion-padding-start">
-              <ion-label position="stacked">Horário de {{ dia.dia }}</ion-label> <!-- Corrigido -->
-              <ion-grid>
-                <ion-row>
-                  <ion-col size="6">
-                    <ion-input
-                      type="time"
-                      label="Início"
-                      labelPlacement="floating"
-                      [(ngModel)]="dia.inicio"
-                    ></ion-input>
-                  </ion-col>
-                  <ion-col size="6">
-                    <ion-input
-                      type="time"
-                      label="Fim"
-                      labelPlacement="floating"
-                      [(ngModel)]="dia.fim"
-                    ></ion-input>
-                  </ion-col>
-                </ion-row>
-              </ion-grid>
-            </ion-item>
-          </ng-container>
-        </ion-list>
+          <ion-item *ngIf="dia.selecionado" class="ion-padding-start">
+            <ion-label position="stacked">Horário de {{ dia.dia }}</ion-label>
+            <ion-grid>
+              <ion-row>
+                <ion-col size="6">
+                  <ion-input
+                    type="time"
+                    label="Início"
+                    labelPlacement="floating"
+                    [(ngModel)]="dia.inicio"
+                  ></ion-input>
+                </ion-col>
+                <ion-col size="6">
+                  <ion-input
+                    type="time"
+                    label="Fim"
+                    labelPlacement="floating"
+                    [(ngModel)]="dia.fim"
+                  ></ion-input>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+          </ion-item>
+        </ng-container>
+      </ion-list>
 
-        <ion-row>
-          <ion-col size="12">
-            <ion-button expand="block" color="primary" class="ion-margin-top" (click)="saveChanges()">
-              Alterar
-            </ion-button>
-          </ion-col>
-        </ion-row>
-      </ion-card-content>
-    </ion-card>
-  </ion-content>
+      <ion-row>
+        <ion-col size="12">
+          <ion-button expand="block" color="primary" class="ion-margin-top" (click)="saveChanges()">
+            Alterar
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
