--- a/src/app/pages/agenda/agenda.page.html
+++ b/src/app/pages/agenda/agenda.page.html
@@ -1,4 +1,5 @@
 <ion-content class="agenda-container" fullscreen>
+  <!-- Top info com padding -->
   <div class="top-info ion-padding">
     <div class="user-header">
       <img [src]="photoURL" alt="avatar" class="avatar" />
@@ -10,6 +11,7 @@
           </button>
         </div>
 
+        <!-- Date picker -->
         <div class="date-picker ion-margin-top">
           <label>Selecione uma data:</label>
           <button class="calendar-button" (click)="showDatePicker = true">
@@ -22,6 +24,7 @@
     </div>
   </div>
 
+  <!-- Date picker modal -->
   <ion-datetime
     *ngIf="showDatePicker"
     presentation="date"
@@ -29,6 +32,7 @@
     (ionCancel)="showDatePicker = false"
   ></ion-datetime>
 
+  <!-- Agenda card -->
   <ion-card class="ion-margin" *ngIf="selectedDate">
     <ion-card-header>
       <h2 class="card-title">Agenda</h2>
@@ -41,6 +45,8 @@
             <h3>{{ item.nome }}</h3>
             <p>{{ item.status }}</p>
           </ion-label>
+
+          <!-- Botões de ação -->
           <ion-button
             *ngIf="role === 'aluno' && item.status === 'Disponível'"
             slot="end"
@@ -48,6 +54,7 @@
             (click)="abrirModal(item.id)">
             Marcar
           </ion-button>
+
           <ion-button
             *ngIf="role === 'professor'"
             slot="end"
