--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -4,10 +4,17 @@
       <img src="assets/icon/home.png" alt="home" class="home" />
       <ion-label>Agenda</ion-label>
     </ion-tab-button>
-   <ion-tab-button tab="disponibilidade" [routerLink]="['/tabs/disponibilidade']">
+
+    <ion-tab-button tab="disponibilidade" [routerLink]="['/tabs/disponibilidade']">
       <img src="assets/icon/timer.png" alt="disponibilidade" class="disponibilidade" />
       <ion-label>Disponibilidade</ion-label>
     </ion-tab-button>
+
+    <ion-tab-button tab="agendados" [routerLink]="['/tabs/agendados']">
+      <img src="assets/icon/timer.png" alt="agendados" class="agendados" />
+      <ion-label>Agendados</ion-label>
+    </ion-tab-button>
+
     <ion-tab-button tab="config" [routerLink]="['/tabs/config']">
       <img src="assets/icon/settings.png" alt="settings" class="settings" />
       <ion-label>Configurações</ion-label>
