--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -11,7 +11,7 @@
     </ion-tab-button>
 
     <ion-tab-button tab="agendados" [routerLink]="['/tabs/agendados']">
-      <img src="assets/icon/timer.png" alt="agendados" class="agendados" />
+      <img src="assets/icon/calendar-sharp.png" alt="agendados" class="agendados" />
       <ion-label>Agendados</ion-label>
     </ion-tab-button>
 
