Marcando aulas com data de inicio e e fim

--- a/src/app/agendamento-modal/agendamento-modal.component.html
+++ b/src/app/agendamento-modal/agendamento-modal.component.html
@@ -5,14 +5,16 @@
     </ion-card-header>
 
     <ion-card-content>
+      <!-- Data -->
       <ion-item>
         <ion-label position="stacked">Data</ion-label>
         <ion-input [value]="date" readonly></ion-input>
       </ion-item>
 
+      <!-- Horário Início -->
       <ion-item>
-        <ion-label position="stacked">Horário</ion-label>
-        <ion-select [(ngModel)]="horario" placeholder="Selecione" *ngIf="disponibilidadeHorarios.length > 0">
+        <ion-label position="stacked">Horário Início</ion-label>
+        <ion-select [(ngModel)]="horarioInicio" placeholder="Selecione horário de início" *ngIf="disponibilidadeHorarios.length > 0">
           <ion-select-option *ngFor="let hora of disponibilidadeHorarios" [value]="hora">
             {{ hora }}
           </ion-select-option>
@@ -22,11 +24,23 @@
         </ion-label>
       </ion-item>
 
+      <!-- Horário Fim -->
+      <ion-item>
+        <ion-label position="stacked">Horário Fim</ion-label>
+        <ion-select [(ngModel)]="horarioFim" placeholder="Selecione horário de fim" *ngIf="disponibilidadeHorarios.length > 0">
+          <ion-select-option *ngFor="let hora of disponibilidadeHorarios" [value]="hora">
+            {{ hora }}
+          </ion-select-option>
+        </ion-select>
+      </ion-item>
+
+      <!-- Aluno -->
       <ion-item>
         <ion-label position="stacked">Aluno</ion-label>
         <ion-input [value]="alunoName" readonly></ion-input>
       </ion-item>
 
+      <!-- Situação -->
       <ion-item>
         <ion-label position="stacked">Situação</ion-label>
         <ion-select [(ngModel)]="status">
@@ -35,8 +49,9 @@
         </ion-select>
       </ion-item>
 
+      <!-- Botões -->
       <ion-button expand="block" color="primary" class="ion-margin-top" (click)="confirmar()">
-        Alterar
+        Confirmar
       </ion-button>
 
       <ion-button expand="block" fill="clear" color="medium" (click)="cancelar()">
